# typeofmood-ime-master

./: README.md  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/jni/: NativeFileList.mk  jni_common.cpp  typeofmood_ime_keyboard_ProximityInfo.cpp  typeofmood_ime_keyboard_ProximityInfo.h  typeofmood_ime_latin_BinaryDictionary.cpp  typeofmood_ime_latin_BinaryDictionary.h  typeofmood_ime_latin_BinaryDictionaryUtils.cpp  typeofmood_ime_latin_BinaryDictionaryUtils.h  typeofmood_ime_latin_DicTraverseSession.cpp  typeofmood_ime_latin_DicTraverseSession.h
app/src/main/res/layout/: emoji_keyboard_page.xml  input_view.xml  main_keyboard_frame.xml  more_keys_keyboard.xml  more_keys_keyboard_for_action_lxx.xml  setup_steps_cards.xml
app/src/main/res/values/: attrs.xml  (+15 more)
app/src/main/res/values-af/: strings-appname.xml  strings.xml
app/src/main/res/values-am/: strings-appname.xml  strings.xml
app/src/main/res/values-ar/: strings-appname.xml  strings.xml
app/src/main/res/values-az/: strings.xml
app/src/main/res/values-b+sr+Latn/: strings-appname.xml  strings.xml
app/src/main/res/values-be/: strings-action-keys.xml  strings-appname.xml  strings-config-important-notice.xml  strings-talkback-descriptions.xml  strings.xml
app/src/main/res/values-bg/: strings-appname.xml  strings.xml
app/src/main/res/values-bn/: strings-appname.xml  strings.xml
app/src/main/res/values-bs/: strings-action-keys.xml  strings-appname.xml  strings-config-important-notice.xml  strings-talkback-descriptions.xml  strings.xml
app/src/main/res/values-ca/: strings-appname.xml  strings.xml
app/src/main/res/values-cs/: strings-appname.xml  strings.xml
app/src/main/res/values-da/: strings-appname.xml  strings.xml
app/src/main/res/values-de/: strings-appname.xml  strings.xml
app/src/main/res/values-el/: strings-appname.xml  strings.xml
app/src/main/res/values-en-rIN/: strings-appname.xml  strings.xml
app/src/main/res/values-es/: strings-appname.xml  strings.xml
app/src/main/res/values-es-rUS/: strings-appname.xml  strings.xml
app/src/main/res/values-et/: strings-appname.xml  strings.xml
app/src/main/res/values-eu/: strings-appname.xml  strings.xml
app/src/main/res/values-fa/: strings-appname.xml  strings.xml
app/src/main/res/values-fi/: strings-appname.xml  strings.xml
app/src/main/res/values-fr/: strings-appname.xml  strings.xml
app/src/main/res/values-fr-rCA/: strings.xml
app/src/main/res/values-gl/: strings-appname.xml  strings.xml
app/src/main/res/values-gu/: strings-appname.xml  strings.xml
app/src/main/res/values-hi/: strings-appname.xml  strings.xml
app/src/main/res/values-hr/: strings-appname.xml  strings.xml
app/src/main/res/values-hu/: strings-appname.xml  strings.xml
app/src/main/res/values-hy/: strings-appname.xml  strings.xml
app/src/main/res/values-in/: strings-appname.xml  strings-emoji-descriptions.xml  strings.xml
app/src/main/res/values-is/: strings-appname.xml  strings.xml
app/src/main/res/values-it/: strings-appname.xml  strings.xml
app/src/main/res/values-iw/: strings-appname.xml  strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ka/: strings-appname.xml  strings.xml
app/src/main/res/values-kk/: strings-appname.xml  strings.xml
app/src/main/res/values-km/: strings-appname.xml  strings.xml
app/src/main/res/values-kn/: strings-appname.xml  strings.xml
app/src/main/res/values-ko/: strings-appname.xml  strings.xml
app/src/main/res/values-ky/: strings-appname.xml  strings.xml
app/src/main/res/values-lo/: strings-appname.xml  strings.xml
app/src/main/res/values-lt/: strings-appname.xml  strings.xml
app/src/main/res/values-lv/: strings-appname.xml  strings.xml
app/src/main/res/values-mk/: strings-appname.xml  strings.xml
app/src/main/res/values-ml/: strings-appname.xml  strings.xml
app/src/main/res/values-mn/: strings-appname.xml  strings.xml
app/src/main/res/values-mr/: strings-appname.xml  strings.xml
app/src/main/res/values-ms/: strings-appname.xml  strings.xml
app/src/main/res/values-my/: strings-appname.xml  strings.xml
app/src/main/res/values-nb/: strings-appname.xml  strings.xml
app/src/main/res/values-ne/: strings-appname.xml  strings.xml
app/src/main/res/values-nl/: strings-appname.xml  strings.xml
app/src/main/res/values-pa/: strings-appname.xml  strings.xml
app/src/main/res/values-pl/: strings-appname.xml  strings.xml
app/src/main/res/values-pt/: strings-appname.xml  strings.xml
app/src/main/res/values-pt-rPT/: strings-appname.xml  strings.xml
app/src/main/res/values-ro/: strings-appname.xml  strings.xml
app/src/main/res/values-ru/: strings-appname.xml  strings.xml
app/src/main/res/values-si/: strings-appname.xml  strings.xml
app/src/main/res/values-sk/: strings-appname.xml  strings.xml
app/src/main/res/values-sl/: strings-appname.xml  strings.xml
app/src/main/res/values-sq/: strings-appname.xml  strings.xml
app/src/main/res/values-sr/: strings-appname.xml  strings.xml
app/src/main/res/values-sv/: strings-appname.xml  strings.xml
app/src/main/res/values-sw/: strings-appname.xml  strings.xml
app/src/main/res/values-sw600dp/: touch-position-correction.xml
app/src/main/res/values-ta/: strings.xml
app/src/main/res/values-te/: strings-appname.xml  strings.xml
app/src/main/res/values-th/: strings-appname.xml  strings.xml
app/src/main/res/values-tl/: strings-appname.xml
app/src/main/res/values-tr/: strings-appname.xml  strings.xml
app/src/main/res/values-uk/: strings-appname.xml  strings.xml
app/src/main/res/values-ur/: strings-appname.xml  strings.xml
app/src/main/res/values-uz/: strings-appname.xml  strings.xml
app/src/main/res/values-vi/: strings-appname.xml  strings.xml
app/src/main/res/values-zh-rCN/: strings-appname.xml  strings.xml
app/src/main/res/values-zh-rHK/: strings-appname.xml  strings.xml
app/src/main/res/values-zh-rTW/: strings-appname.xml  strings.xml
app/src/main/res/values-zu/: strings-appname.xml  strings.xml
(+335 files in other folders)
